--- a/01_introduction_to_r.qmd
+++ b/01_introduction_to_r.qmd
@@ -27,7 +27,7 @@ If you haven't already, please install R and RStudio on your computer:
 
 \
 
-2.  Download the material for this session from the [Actuarial University Dashboard](https://www.actuarialuniversity.com/) using the course link below: <https://www.actuarialuniversity.com/seminar/View/15335>. You'll find a `2025 AFDP R Training` folder with all the necessary files.
+2.  Download the material for this session from the [Actuarial University Dashboard](https://www.actuarialuniversity.com/) using the course link: <https://www.actuarialuniversity.com/seminar/View/15335>. 
 
 3.  Open RStudio and install the necessary packages with the following command:
 
